# t-scheduling

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmarks/: .gitignore  run-previous.sh  run-proposed.sh  sample.qc  tof_1.qc  tof_2.qc
src/: character.cpp  character.hpp  circuit.cpp  circuit.hpp  circuit_builder.cpp  circuit_builder.hpp  circuit_reader.cpp  circuit_reader.hpp  gate.hpp  gaussian_decomposer.cpp  gaussian_decomposer.hpp  main.cpp  matrix_decomposer.hpp  option.cpp  synthesis.cpp  synthesis.hpp  util.cpp  util.hpp
src/character/: character.cpp  character.hpp
src/circuit/: circuit.cpp  circuit.hpp  gate.hpp
src/decomposer/: gaussian_decomposer.cpp  gaussian_decomposer.hpp  matrix_decomposer.hpp  parallel_decomposer.cpp  parallel_decomposer.hpp
src/io/: circuit_reader.cpp  circuit_reader.hpp
src/layout/: layout.cpp  layout.hpp
src/matrix/: matrix_reconstructor.cpp  matrix_reconstructor.hpp
src/parallel/: parallelization_oracle.cpp  parallelization_oracle.hpp
src/simulator/: simulator.cpp  simulator.hpp
src/synthesis/: greedy_circuit_builder.cpp  greedy_circuit_builder.hpp  simple_circuit_builder.cpp  simple_circuit_builder.hpp  synthesis.hpp  synthesis_method_factory.hpp  tpar_synthesis.cpp  tpar_synthesis.hpp  tskd_synthesis.cpp  tskd_synthesis.hpp
src/tpar/: CMakeLists.txt  matroid.hpp  partition.cpp  partition.hpp
src/util/: option.hpp  util.cpp  util.hpp
